--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Sun Jul 09 17:29:30 PDT 2017
+#Sun Nov 19 12:38:24 PST 2017
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.42\\bin
-configurations-xml=39a7399db01c5e037b9de34c22355e68
+configurations-xml=8da700bcbd31004ca2481450884e595d
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=ae9d6f908f45ead69f57a5ca9f5b38b0
 default.languagetoolchain.version=1.42
 host.platform=windows
